section-7/ingresses/airflow-ssl-ingress-dev.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: marclamberti-airflow.com
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-3:953076219999:certificate/00462c5c-2d97-4c3e-90a1-eabbaeae52fc
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: airflow-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /airflow-dev/*
            backend:
              serviceName: airflow-webserver
              servicePort: 8080
